Update Exploration of attributes.ipynb

--- a/Assignment2/Exploration of attributes.ipynb
+++ b/Assignment2/Exploration of attributes.ipynb
@@ -2044,7 +2044,7 @@
     "        if len(new_df[new_df['click_bool'] == 1]) != 0:\n",
     "            for i in range(len(new_df)):\n",
     "                if len(new_df[new_df['booking_bool'] == 1]) == 0:\n",
-    "                    score = (new_df['click_bool'][i]*3) / (math.log(new_df['position'][i] + 1, 2))\n",
+    "                    score = (new_df['click_bool'][i]1) / (math.log(new_df['position'][i] + 1, 2))\n",
     "                    scores.append(score)\n",
     "                elif len(new_df[new_df['booking_bool'] == 1]) == 1:\n",
     "                    score = (new_df['booking_bool'][i]*5) / (math.log(new_df['position'][i] + 2, 2))\n",
@@ -2083,7 +2083,7 @@
     "        score = 5 / (math.log(book_df['position'].values[i] + 1, 2))\n",
     "        scores.append(score)\n",
     "    for i in range(len(click_df)):\n",
-    "        score = 3 / (math.log(book_df['position'].values[i] + 1, 2))\n",
+    "        score = 1 / (math.log(book_df['position'].values[i] + 1, 2))\n",
     "        scores.append(score)\n",
     "\n",
     "    \n",
